[SG-3] Bug fixed on generateGraph